2008-04-09  Stefan Seefeld  <stefan@codesourcery.com>

	* qmdist/command/install_lib.py: Remove incorrect use of --root.

2007-09-26  Stefan Seefeld  <stefan@codesourcery.com>

	* NEWS: Document new features in version 2.4.
	* doc/qmtest.ent: Set version number to 2.4.
	* qm/config.py: Don't hard-code version number.
	* qmdist/command/build_py.py: ...but compute it at build time.
	* qmdist/command/install_lib.py: Likewise.
	* setup.py: Cleanup.
	* share/qmtest/examples: Move to...
	* share/doc/qmtest/examples: ...here.

2007-09-25  Stefan Seefeld  <stefan@codesourcery.com>

	* MANIFEST.in: Remove obsolete entries.
	* qm/test/classes/xml_expectation_database.py: Refine.
	* share/qmtest/examples/tdb: Rename to...
	* share/qmtest/examples/xml_tdb: ...this.
	* share/qmtest/examples/compilation_tdb: Add new example test database.
	* qm/test/classes/previous_testrun.py: Add file_name parameter.
	* doc/concepts.xml: Document expectation databases.
	* doc/customizing.xml: Likewise.

	* qm/test/classes/compiler.py: Add 'ldflags' parameters.
	* qm/test/classes/compiler_test.py: Add 'compiler' and 'ldflags'
	  parameters to CompilationStep.
	* qm/test/classes/compilation_test.py: Adjust.
	* qm/test/classes/compilation_test_database.py: Adjust.
	* doc/customizing.xml: Adjust.
	
2007-09-24  Stefan Seefeld  <stefan@codesourcery.com>

	* share/qmtest/tutorial: Rename to...
	* share/qmtest/examples: ...this.

2007-09-20  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/mount_database.py: Add 'mounts' parameter,
	  fix GetIds() method.
	* tests/QMTest/configuration: Update MountDatabase configuration.
	* qm/test/expectation_database.py: Define new extension type.
	* qm/test/classes/previous_testrun.py: New extension.
	* qm/test/classes/xml_expectation_database.py: New extension.
	* qm/test/classes/classes.qmc: Register them.
	* qm/test/cmdline.py: Support ExpectationDatabase
	* qm/test/base.py: Likewise.
	* qm/test/execution_engine.py: Adjust.